update for community edition