@@ -1,28 +1,17 @@
-FROM openjdk:11-jre-slim@sha256:85795599f4c765182c414a1eb4e272841e18e2f267ce5010ea6a266f7f26e7f6
-LABEL maintainer="Koen Rouwhorst <koen@privesc.com>"
-
-ARG PORTSWIGGER_EMAIL_ADDRESS
-ARG PORTSWIGGER_PASSWORD
-
-ENV BURP_SUITE_PRO_VERSION="2021.4.3"
-ENV BURP_SUITE_PRO_CHECKSUM="df1979a9beaf60ed92c3e67af729d51422d4c39ca226545703652dbe466747a3"
+FROM openjdk:11-jre-slim
+LABEL maintainer="Hex <hex@cowboy.dev>"
 
 ENV HOME /home/burp
 
-ENV JAVA_OPTS "-Dawt.useSystemAAFontSettings=gasp "\
-  "-Dswing.aatext=true "\
-  "-Dsun.java2d.xrender=true" \
-  "-XX:+UnlockExperimentalVMOptions "\
-  "-XX:+UseCGroupMemoryLimitForHeap "\
-  "-XshowSettings:vm"
-
-RUN apt update && apt install -y curl openssl ca-certificates \
-  fontconfig ttf-dejavu libxext6 libxrender1 libxtst6
-
-COPY ./download.sh ./entrypoint.sh /home/burp/
-RUN chmod +x /home/burp/download.sh /home/burp/entrypoint.sh && \
-  /home/burp/download.sh && \
-  mv "$HOME/burpsuite_pro_v$BURP_SUITE_PRO_VERSION.jar" /home/burp/burpsuite_pro.jar
+RUN apt-get update && apt-get install -y \
+  curl \
+  openssl \
+  ca-certificates \
+  fontconfig \
+  ttf-dejavu \
+  libxext6 \
+  libxrender1 \
+  libxtst6
 
 RUN addgroup --system burp && \
   adduser --system --ingroup burp burp
@@ -32,10 +21,15 @@ RUN mkdir -p .java/.userPrefs
 USER burp
 WORKDIR $HOME
 
-# Burp Proxy
-EXPOSE 8080
+# Download the JAR
+RUN curl https://portswigger.net/burp/releases/download \
+  -o burpsuite_community.jar
 
-# Burp REST API
-EXPOSE 1337
+# Set configurations
+ADD config config
 
-ENTRYPOINT ["/home/burp/entrypoint.sh", "/home/burp/burpsuite_pro.jar"]
+# Set X11 server to local machine
+ENV DISPLAY=host.docker.internal:0
+
+COPY entrypoint.sh $PWD
+ENTRYPOINT ["./entrypoint.sh", "burpsuite_community.jar"]
